--- a/src/views/cart.hbs
+++ b/src/views/cart.hbs
@@ -86,11 +86,8 @@
     <li class="page-item mt-3 mr-2 ml-2">
       <a class="btn btn-primary" href="/products">Ir a Products</a>
     </li>
-    <li class="page-item mt-3 mr-2 ml-2">
-      <a class="btn btn-primary" href="/users/register">Regístrate</a>
-    </li>
     <li class="page-item mt-3 ml-2">
-      <a class="btn btn-primary" href="/users/login">Inicia sesión</a>
+      <a class="btn btn-primary" href="/api/users">Perfil</a>
     </li>
   </ul>
 </nav>
