--- a/src/views/github-login.hbs
+++ b/src/views/github-login.hbs
@@ -4,7 +4,7 @@
 
     <div class="mt-5">
         <h2>No quieres usar GitHub? Puedes usar nuestros enlaces:</h2>
-        <p>No estás registrado? <a href="/users/register">Regístrate Aquí</a></p>
-        <p>Ya tienes cuenta con nosotros? <a href="/users/login">Haz login Aquí</a></p>
+        <p>No estás registrado? <a href="/api/users/register">Regístrate Aquí</a></p>
+        <p>Ya tienes cuenta con nosotros? <a href="/api/users/login">Haz login Aquí</a></p>
     </div>
 </div>
