--- a/src/views/login.hbs
+++ b/src/views/login.hbs
@@ -12,7 +12,7 @@
         <button type="submit" class="btn btn-primary">Ingresar</button>
     </form>
     <p class="mt-3">¿tienes cuenta de GitHub? <a href="/github/login">Ingresa Aqui</a></p>
-    <p class="mt-3">¿No estás registrado? <a href="/users/register">Regístrate aquí</a></p>
+    <p class="mt-3">¿No estás registrado? <a href="/api/users/register">Regístrate aquí</a></p>
     <p class="mt-3">¿Olvidaste tu Contraseña? <a href="/resetPassword">Click Aquí </a></p>
    
 </div>
