--- a/src/views/resetPassword.hbs
+++ b/src/views/resetPassword.hbs
@@ -72,7 +72,7 @@
                         text: data.message,
                         confirmButtonText: 'OK',
                         onClose: () => {
-                            window.location.href = '/users/login';
+                            window.location.href = '/api/users/login';
                         }
                     });
                 } else {
