--- a/src/views/home.hbs
+++ b/src/views/home.hbs
@@ -13,10 +13,10 @@
       <a class="btn btn-primary" href="/products">Ir a Products</a>
     </li>
     <li class="page-item mt-3 mr-2 ml-2">
-      <a class="btn btn-primary" href="/users/register">Regístrate</a>
+      <a class="btn btn-primary" href="/api/users/register">Regístrate</a>
     </li>
     <li class="page-item mt-3 ml-2">
-      <a class="btn btn-primary" href="/users/login">Inicia sesión</a>
+      <a class="btn btn-primary" href="/api/users/login">Inicia sesión</a>
     </li>
   </ul>
 </nav>
