--- a/src/views/product.hbs
+++ b/src/views/product.hbs
@@ -41,7 +41,7 @@
         <ul class="pagination">
             <p> <a href="/cart" class="btn btn-primary ml-3">Ir al Carrito</a></p>
             <p> <a href="/chat" class="btn btn-primary ml-3 ">Ir al Chat</a></p>
-
+            <p> <a href="/api/users" class="btn btn-primary ml-3">Perfil</a></p>
             <p> <a href="/products" class="btn btn-primary ml-3">Ir a Products</a></p>
 
 
@@ -56,7 +56,7 @@
 </div>
 
 
-    <script src="/socket.io/socket.io.js"></script>
+    
     <script src="../public/main.js" ></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
     <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
