--- a/src/views/profile.hbs
+++ b/src/views/profile.hbs
@@ -22,12 +22,8 @@
     <li class="page-item mt-3 mr-2 ml-2">
       <a class="btn btn-primary" href="/products">Ir a Products</a>
     </li>
-    <li class="page-item mt-3 mr-2 ml-2">
-      <a class="btn btn-primary" href="/users/register">Regístrate</a>
-    </li>
-    <li class="page-item mt-3 ml-2">
-      <a class="btn btn-primary" href="/users/login">Inicia sesión</a>
-    </li>
+   
+    
   </ul>
 </nav>
 <div class="container mt-5">
@@ -117,7 +113,7 @@ function uploadDocuments() {
     }
 
     // Enviar la solicitud POST con los archivos al endpoint
-    fetch(`/users/${userId}/documents`, {
+    fetch(`/api/users/${userId}/documents`, {
         method: 'POST',
         body: formData
     })
@@ -157,7 +153,7 @@ function uploadDocuments() {
     document.getElementById('changeRoleButton').addEventListener('click', function() {
         const userId = "{{user._id}}"; // Obtener el ID del usuario de Handlebars
 
-        fetch(`/users/${userId}`, {
+        fetch(`/api/users/${userId}`, {
             method: 'PUT',
             headers: {
                 'Content-Type': 'application/json'
