--- a/src/views/realtimeproducts.hbs
+++ b/src/views/realtimeproducts.hbs
@@ -73,9 +73,7 @@
     <div class="container mt-5">
         <nav aria-label="Page navigation example">
   <ul class="pagination">
-    <li class="page-item mt-3 mr-2 ml-2">
-      <a class="btn btn-primary" href="/realtimeproducts">Ir a Carga de productos</a>
-    </li>
+    
     <li class="page-item mt-3 mr-2 ml-2">
       <a class="btn btn-primary" href="/chat">Ir al Chat</a>
     </li>
@@ -85,12 +83,10 @@
     <li class="page-item mt-3 mr-2 ml-2">
       <a class="btn btn-primary" href="/products">Ir a Products</a>
     </li>
-    <li class="page-item mt-3 mr-2 ml-2">
-      <a class="btn btn-primary" href="/users/register">Regístrate</a>
-    </li>
     <li class="page-item mt-3 ml-2">
-      <a class="btn btn-primary" href="/users/login">Inicia sesión</a>
+      <a class="btn btn-primary" href="/api/users">Perfil</a>
     </li>
+    
   </ul>
 </nav>
 </form>
