--- a/src/views/register.hbs
+++ b/src/views/register.hbs
@@ -23,7 +23,7 @@
         </div>
         <button type="submit" class="btn btn-primary">Registrarse</button>
     </form>
-    <p class="mt-3">¿Ya tienes una cuenta? <a href="/users/login">Ingresa aquí</a></p>
+    <p class="mt-3">¿Ya tienes una cuenta? <a href="/api/users/login">Ingresa aquí</a></p>
 </div>
 <script src="../public/register.js"></script>
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
