--- a/src/views/profile.hbs
+++ b/src/views/profile.hbs
@@ -22,12 +22,21 @@
     <li class="page-item mt-3 mr-2 ml-2">
       <a class="btn btn-primary" href="/products">Ir a Products</a>
     </li>
+    <li class="page-item mt-3 mr-2 ml-2">
+      <a class="btn btn-primary" href="/apidocs">Documentacion</a>
+    </li>
+    <li class="page-item mt-3 mr-2 ml-2">
+      <a class="btn btn-primary" href="/mockingproducts">MockingProducts</a>
+    </li>
+    <li class="page-item mt-3 mr-2 ml-2">
+      <a class="btn btn-primary" href="/loggerTest">loggerTest</a>
+    </li>
    
     
   </ul>
 </nav>
 <div class="container mt-5">
-    <h1 class="mb-4">Tu Perfil (sin datos sensibles)</h1>
+    <h1 class="mb-4">Tu Perfil:</h1>
     <div class="card">
         <div class="card-body">
             <p class="card-text"><strong>Nombre:</strong> {{user.name}}</p>
