--- a/src/views/chat.hbs
+++ b/src/views/chat.hbs
@@ -68,7 +68,7 @@
 <!-- Socket.io JS -->
 <script src="/socket.io/socket.io.js"></script>
 <!-- Main JavaScript -->
-<script src="/main.js"></script>
+<script src="/chat.js"></script>
 
 </body>
 </html>
