--- a/src/views/login.hbs
+++ b/src/views/login.hbs
@@ -16,7 +16,7 @@
     <p class="mt-3">¿Olvidaste tu Contraseña? <a href="/resetPassword">Click Aquí </a></p>
    
 </div>
-<script src="../public/login.js"></script>
+<script src="/login.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
