--- a/src/views/register.hbs
+++ b/src/views/register.hbs
@@ -25,7 +25,7 @@
     </form>
     <p class="mt-3">¿Ya tienes una cuenta? <a href="/api/users/login">Ingresa aquí</a></p>
 </div>
-<script src="../public/register.js"></script>
+<script src="/register.js"></script>
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 
