logOut y CambioDeRoll correctos

--- a/src/views/cart.hbs
+++ b/src/views/cart.hbs
@@ -146,7 +146,7 @@
 </html>
 
   <!-- Agrega los scripts de Bootstrap y funciones personalizadas al final del body -->
-  <script src="../public/cart.js" ></script>
+  <script src="/cart.js" ></script>
   <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/js/bootstrap.bundle.min.js"></script>
   <!-- ... Tu código HTML existente ... -->
