panel de admin creado

--- a/src/views/resetPassword.hbs
+++ b/src/views/resetPassword.hbs
@@ -1,16 +1,10 @@
-<!DOCTYPE html>
+
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Restablecer Contraseña</title>
-    <!-- Bootstrap CSS -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KyZXEAg3QhqLMpG8r+Knujsl5+z5vIOj76j5wqV5gAPtk12jFAOg8L8t+J1rXddJ" crossorigin="anonymous">
-    <!-- SweetAlert2 CSS -->
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/sweetalert2@10">
-    <style>
-        /* Estilos CSS aquí */
-    </style>
+    
 </head>
 <body>
     <div class="container mt-5">
@@ -28,10 +22,9 @@
             <button type="submit" class="btn btn-primary">Restablecer Contraseña</button>
         </form>
     </div>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 
-    <!-- Bootstrap JS (Optional) -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-giiCDsPVxn4FZ0pd+PRmk9GzI1E4Igy2xuVm2V+3cGkWl4y4TEvEEwTISww/a2XG" crossorigin="anonymous"></script>
-    <!-- SweetAlert2 JS -->
+       <!-- SweetAlert2 JS -->
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@10"></script>
     <script src="/resetPassword.js" ></script>
 </body>
