--- a/src/views/admin.hbs
+++ b/src/views/admin.hbs
@@ -112,6 +112,7 @@
                 {{/each}}
             </tbody>
         </table>
+    
     </div>
     <!-- Agrega los scripts de Bootstrap al final del documento -->
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
@@ -120,6 +121,10 @@
     <!-- Agrega FontAwesome para los íconos -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/js/all.min.js"></script>
     <script>
+ // Secuencia de teclas dese
+
+
+
         // Inicializar tooltips de Bootstrap
         $(function () {
             $('[data-toggle="tooltip"]').tooltip();
