--- a/src/views/profile.hbs
+++ b/src/views/profile.hbs
@@ -31,8 +31,8 @@
     <li class="page-item mt-3 mr-2 ml-2">
       <a class="btn btn-primary" href="/loggerTest">loggerTest</a>
     </li>
-   
-    
+
+  
   </ul>
 </nav>
 <div class="container mt-5">
@@ -47,38 +47,39 @@
         </div>
         <a class="btn btn-primary" href="/tickets">Ver Mis Tickets</a>
         <!-- Botón para cambiar el rol del usuario -->
-        <button onclick="cambiarRol('{{user._id}}')" class="btn btn-warning">Cambiar Rol</button>
+        {{#if (eq user.role 'premium')}}
+    <button id="cambiarRolBtn" onclick="cambiarRol('{{user._id}}')" class="btn btn-warning" style="display: block;">Cambiar Rol</button>
+{{else}}
+    <button id="cambiarRolBtn" onclick="cambiarRol('{{user._id}}')" class="btn btn-warning" style="display: none;">Cambiar Rol</button>
+{{/if}}
+
+
+
         <button onclick="logOut()" class="btn btn-danger">Cerrar Sesión</button>
     </div>
-<h2>Subir Documentos:  <button class="btn btn-outline-secondary" type="button" data-bs-toggle="popover" title="Tipos de Documentos Permitidos" data-bs-content="Identificacion, Comprobante de domicilio, Comprobante de estado de cuenta">
-    &#9432;
-</button></h2>
-<form id="uploadForm" enctype="multipart/form-data">
-    <div class="mb-3">
-        <label for="documents" class="form-label">Seleccionar archivos:</label>
-       
 
-        <div class="input-group">
-            <input type="file" class="form-control" id="documents" name="documents[]" multiple>
-             
+    <h2>Subir Documentos:  <button class="btn btn-outline-secondary" type="button" data-bs-toggle="popover" title="Tipos de Documentos Permitidos" data-bs-content="Identificacion, Comprobante de domicilio, Comprobante de estado de cuenta">&#9432;</button></h2>
+    <form id="uploadForm" enctype="multipart/form-data">
+        <div class="mb-3">
+            <label for="documents" class="form-label">Seleccionar archivos:</label>
+            <div class="input-group">
+                <input type="file" class="form-control" id="documents" name="documents[]" multiple>
+            </div>
         </div>
-    </div>
-    <button type="button" class="btn btn-primary" onclick="uploadDocuments()">Subir Documentos</button>
-</form>
+        <button type="button" class="btn btn-primary" onclick="uploadDocuments()">Subir Documentos</button>
+    </form>
+ <audio id="audioPlayer" controls style="display: none;">
+    <source src="/assets/audio/audioCapitan.mp3" type="audio/mpeg">
+    Tu navegador no soporta la reproducción de audio.
+</audio>
+   
 
 </div>
-
 
 <script src="/profile.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
-<script>
-    // Inicializar los popovers de Bootstrap
-    var popoverTriggerList = [].slice.call(document.querySelectorAll('[data-bs-toggle="popover"]'));
-    var popoverList = popoverTriggerList.map(function (popoverTriggerEl) {
-        return new bootstrap.Popover(popoverTriggerEl);
-    });
-</script>
+
 
 </body>
 </html>
