--- a/src/views/tickets.hbs
+++ b/src/views/tickets.hbs
@@ -7,12 +7,11 @@
     <title>Tickets</title>
 </head>
 <body>
-    <nav aria-label="Page navigation example">
+<nav aria-label="Page navigation example">
   <ul class="pagination">
-    <li class="page-item mt-3 mr-2 ml-2">
-      <a class="btn btn-primary" href="/realtimeproducts">Ir a Carga de productos</a>
+     <li class="page-item mt-3 ml-2">
+      <a class="btn btn-primary" href="/api/users">Perfil</a>
     </li>
-   
     <li class="page-item mt-3 mr-2 ml-2">
       <a class="btn btn-primary" href="/chat">Ir al Chat</a>
     </li>
@@ -23,11 +22,16 @@
       <a class="btn btn-primary" href="/products">Ir a Products</a>
     </li>
     <li class="page-item mt-3 mr-2 ml-2">
-      <a class="btn btn-primary" href="/api/users/register">Regístrate</a>
+      <a class="btn btn-primary" href="/apidocs">Documentacion</a>
     </li>
-    <li class="page-item mt-3 ml-2">
-      <a class="btn btn-primary" href="/api/users/login">Inicia sesión</a>
+    <li class="page-item mt-3 mr-2 ml-2">
+      <a class="btn btn-primary" href="/mockingproducts">MockingProducts</a>
     </li>
+    <li class="page-item mt-3 mr-2 ml-2">
+      <a class="btn btn-primary" href="/loggerTest">loggerTest</a>
+    </li>
+   
+    
   </ul>
 </nav>
 
