--- a/src/views/chat.hbs
+++ b/src/views/chat.hbs
@@ -20,12 +20,8 @@
 <body>
 <nav aria-label="Page navigation example">
   <ul class="pagination">
-    <li class="page-item mt-3 mr-2 ml-2">
-      <a class="btn btn-primary" href="/realtimeproducts">Ir a Carga de productos</a>
-    </li>
-   
-    <li class="page-item mt-3 mr-2 ml-2">
-      <a class="btn btn-primary" href="/chat">Ir al Chat</a>
+     <li class="page-item mt-3 ml-2">
+      <a class="btn btn-primary" href="/api/users">Perfil</a>
     </li>
     <li class="page-item mt-3 mr-2 ml-2">
       <a class="btn btn-primary" href="/cart">Ir al carrito</a>
