--- a/src/views/mock.hbs
+++ b/src/views/mock.hbs
@@ -9,6 +9,27 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 </head>
 <body>
+    <nav aria-label="Page navigation example">
+  <ul class="pagination">
+     <li class="page-item mt-3 ml-2">
+      <a class="btn btn-primary" href="/api/users">Perfil</a>
+    </li>
+    <li class="page-item mt-3 mr-2 ml-2">
+      <a class="btn btn-primary" href="/chat">Ir al Chat</a>
+    </li>
+    <li class="page-item mt-3 mr-2 ml-2">
+      <a class="btn btn-primary" href="/cart">Ir al carrito</a>
+    </li>
+    <li class="page-item mt-3 mr-2 ml-2">
+      <a class="btn btn-primary" href="/apidocs">Documentacion</a>
+    </li>
+    <li class="page-item mt-3 mr-2 ml-2">
+      <a class="btn btn-primary" href="/loggerTest">loggerTest</a>
+    </li>
+   
+    
+  </ul>
+</nav>
     <div class="container">
         <h1 class="mt-5">Lista de Productos</h1>
         <div class="row mt-4">
