--- a/src/views/productos.hbs
+++ b/src/views/productos.hbs
@@ -21,6 +21,30 @@
 <div class="container mt-5">
     <div class="d-flex justify-content-center align-items-center mt-4">
         <nav aria-label="Page navigation example">
+            <nav aria-label="Page navigation example">
+  <ul class="pagination">
+     <li class="page-item mt-3 ml-2">
+      <a class="btn btn-primary" href="/api/users">Perfil</a>
+    </li>
+    <li class="page-item mt-3 mr-2 ml-2">
+      <a class="btn btn-primary" href="/chat">Ir al Chat</a>
+    </li>
+    <li class="page-item mt-3 mr-2 ml-2">
+      <a class="btn btn-primary" href="/cart">Ir al carrito</a>
+    </li>
+    <li class="page-item mt-3 mr-2 ml-2">
+      <a class="btn btn-primary" href="/apidocs">Documentacion</a>
+    </li>
+    <li class="page-item mt-3 mr-2 ml-2">
+      <a class="btn btn-primary" href="/mockingproducts">MockingProducts</a>
+    </li>
+    <li class="page-item mt-3 mr-2 ml-2">
+      <a class="btn btn-primary" href="/loggerTest">loggerTest</a>
+    </li>
+   
+    
+  </ul>
+</nav>
             <ul class="pagination">
                 {{#if responseObject.hasPrevPage}}
                     <li class="page-item">
@@ -36,10 +60,7 @@
                     </li>
                 {{/if}}
                
-                <p> <a href="/realtimeproducts" class="btn btn-primary ml-3">Ir a Carga de productos</a></p>
-                <p> <a href="/chat" class="btn btn-primary ml-3">Ir al Chat</a></p>
-                <p> <a href="/cart" class="btn btn-primary ml-3">Ir al carrito</a></p>
-                <p> <a href="/api/users" class="btn btn-primary ml-3">Perfil</a></p>
+                
             </ul>
         </nav>
     </div>
