--- a/src/views/profile.hbs
+++ b/src/views/profile.hbs
@@ -53,9 +53,14 @@
     <button id="cambiarRolBtn" onclick="cambiarRol('{{user._id}}')" class="btn btn-warning" style="display: none;">Cambiar Rol</button>
 {{/if}}
 
+{{#if (eq user.role 'admin')}}
+    <a href="/api/admin" class="btn btn-info">Panel de Administrador</a>
+{{/if}}
+
 
 
         <button onclick="logOut()" class="btn btn-danger">Cerrar Sesión</button>
+
     </div>
 
     <h2>Subir Documentos:  <button class="btn btn-outline-secondary" type="button" data-bs-toggle="popover" title="Tipos de Documentos Permitidos" data-bs-content="Identificacion, Comprobante de domicilio, Comprobante de estado de cuenta">&#9432;</button></h2>
@@ -79,7 +84,94 @@
 <script src="/profile.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+<script>
+  
+function uploadDocuments() {
+    const filesInput = document.getElementById('documents');
+    const files = filesInput.files;
 
+    // Verificar si no se han seleccionado archivos
+    if (files.length === 0) {
+        Swal.fire({
+            icon: 'error',
+            title: 'Error',
+            text: 'Por favor selecciona al menos un archivo para subir.',
+            showConfirmButton: true,
+        });
+        return; // Salir de la función
+    }
+
+    Swal.showLoading(); // Mostrar carga visual
+
+    const userId = "{{user._id}}"; // Obtener el ID del usuario
+    const formData = new FormData(); // Crear objeto FormData para enviar archivos
+
+    // Nombres permitidos de documentos (sin extensión)
+    const allowedDocumentNames = ['Identificacion', 'Comprobante de domicilio', 'Comprobante de estado de cuenta'];
+
+    // Función para obtener el nombre base del archivo (sin extensión)
+    function getBaseName(fileName) {
+        return fileName.split('.').slice(0, -1).join('.');
+    }
+
+    // Recorrer todos los archivos seleccionados
+    for (let i = 0; i < files.length; i++) {
+        const file = files[i];
+        const fileName = file.name; // Obtener el nombre del archivo
+        const baseFileName = getBaseName(fileName); // Obtener el nombre base del archivo
+
+        // Verificar si el nombre base del archivo está en la lista de nombres permitidos
+        if (allowedDocumentNames.includes(baseFileName)) {
+            formData.append('documents', file); // Agregar archivo al FormData
+        } else {
+            // Mostrar mensaje de error si el nombre del archivo no es permitido
+            Swal.fire({
+                icon: 'error',
+                title: 'Error',
+                text: `El archivo "${fileName}" no es válido. Por favor, selecciona archivos Validos.`,
+                showConfirmButton: true,
+            });
+            return; // Salir de la función
+        }
+    }
+
+    // Enviar la solicitud POST con los archivos al endpoint
+    fetch(`/api/users/${userId}/documents`, {
+        method: 'POST',
+        body: formData
+    })
+        .then(response => {
+            if (!response.ok) {
+                throw new Error('Error al subir documentos');
+            }
+            return response.json();
+        })
+        .then(data => {
+            console.info('Documentos subidos correctamente:', data);
+            Swal.fire({
+                icon: 'success',
+                title: 'Documentos subidos correctamente',
+                showConfirmButton: true,
+            }).then((result) => {
+                if (result.isConfirmed) {
+                    location.reload(); // Recargar la página
+                }
+            });
+        })
+        .catch(error => {
+            console.error('Error al subir documentos:', error);
+            Swal.fire({
+                icon: 'error',
+                title: 'Error al subir documentos',
+                text: 'Ocurrió un error al subir los documentos. Por favor, inténtalo de nuevo más tarde.',
+                showConfirmButton: true,
+            });
+        })
+        .finally(() => {
+            Swal.hideLoading(); // Ocultar carga visual al finalizar, ya sea con éxito o error
+        });
+}
+</script>
 
 </body>
 </html>
